--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "3.11.5"
 asyncio = "^3.4.3"
 aiohttp = "^3.8.5"
 bs4 = "^0.0.1"
+selenium = "^4.12.0"
+webdriver-manager = "^4.0.0"
 
 
 [build-system]
